Add Zod validation for all route files

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 MONGODB_URI=mongodb+srv://abhayabikramshahiofficial_db_user:GwWDxkypeN6zN5aV@cluster0.iw5alxz.mongodb.net/vauju-dating-app?retryWrites=true&w=majority
 JWT_SECRET=your_super_secret_jwt_key_here_change_this_in_production
+MONGODB_URI1=mongodb+srv://pragyanthapaliya027_db_user:SGvG5TznZnzXZhvm@ym.3ruozk6.mongodb.net/?appName=ym
 PORT=5005
 
 # Environment
