--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "multer": "^2.0.2",
     "sanitizer": "^0.1.3",
     "socket.io": "^4.7.2",
-    "xss-clean": "^0.1.1"
+    "xss-clean": "^0.1.1",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
